# xgb-optuna-calibration-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: tests.yml
models/: pima_clf_v1.pkl  pima_clf_v2.pkl
notebooks/: mlflow.db  xgb_optuna_pima_diabetes.ipynb  xgb_optuna_warm_start.ipynb
notebooks/mlruns/450156835989473025/: meta.yaml
notebooks/mlruns/450156835989473025/02726c47230d444dbea626637f33d863/: meta.yaml
notebooks/mlruns/450156835989473025/068268f5f9d8483fbb1d77e61edcb6ba/: meta.yaml
notebooks/mlruns/450156835989473025/09000a4855d34e18bb9f5d8efe6ee0ab/: meta.yaml
notebooks/mlruns/450156835989473025/16c0b785e1ac43cabc4dfcf8b26ee831/: meta.yaml
notebooks/mlruns/450156835989473025/1a04b4babbfe4c9496133278be5d4e16/: meta.yaml
notebooks/mlruns/450156835989473025/1cd96b9e2ff34213b82ea03f3d79ca7a/: meta.yaml
notebooks/mlruns/450156835989473025/1d3ee3d3dbfc499488a64d541c257cdd/: meta.yaml
notebooks/mlruns/450156835989473025/25030c6f73a341e6911d8651e4129c8c/: meta.yaml
notebooks/mlruns/450156835989473025/2cd050f30aeb41e6b77e4e42212b9ca4/: meta.yaml
notebooks/mlruns/450156835989473025/306e08a83e944202a871740033a2e08d/: meta.yaml
notebooks/mlruns/450156835989473025/3180dd61103a4a439ec9c37c98aadf1c/: meta.yaml
notebooks/mlruns/450156835989473025/453cbffda5cb413c8795885c4b3cea24/: meta.yaml
notebooks/mlruns/450156835989473025/45c9e2aaa34d4ae2836c95e1e34274ce/: meta.yaml
src/: helper_functions.py  xgb_opt_clf.py  xgb_opt_clf_warm.py
src/xgb_optuna.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_xgb_opt_clf.py  test_xgb_opt_clf_warm.py
(+1262 files in other folders)
