[project]
name = "xgb-optuna"
version = "0.7.5"
description = "XGBoost calibrated adjusted classification pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "jupyterlab>=4.5.6",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "optuna-integration>=0.4.0",
    "plotly>=6.7.0",
    "flask>=3.1.3",
    "xgboost>=3.2.0",
    "flask-cors>=6.0.2",
    "mlflow>=2.19.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::sklearn.exceptions.UndefinedMetricWarning",
]
